--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
          <meta charset="utf-8">
          <title>TREC SEARCH</title>
-        </head>
+         </head>
     <body>
-
+        <h1>TREC SEARCH</h1>
+    <p> the fair search engine</p>
     </body>
  </html>
