--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
          </head>
     <body>
         <h1>TREC SEARCH</h1>
-    <p> the fair search engine</p>
+        <p><em><strong>the fair search engine</strong></em></p>
+        <hr> 
     </body>
  </html>
