--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
+
+<input type="text" placeholder="Search" />
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
          <meta charset="utf-8">
          <title>TREC SEARCH</title>
+         <link rel="stylesheet" href="css/style.css"/>
          </head>
     <body>
         <h1>TREC SEARCH</h1>
         <p><em><strong>the fair search engine</strong></em></p>
-        <hr> 
+        <div class=" Search-box">
+            <input class="search-txt" type="text" name="" placeholder="Type to Search ">
+        <a class="search-btn" href="£"></a>
+        </div>
+        <link> 
+        </body>
+
+
     </body>
  </html>
