--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 
-<input type="text" placeholder="Search" />
 <!DOCTYPE html>
 <html>
-    <head>
+
+<div class="heading">
+    <h1>TREC SEARCH</h1>
+</div>
+
+
+<div class="heading">
+    <h4><p><em><strong>the fair search engine</strong></em></p></h4>
         <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-         <meta charset="utf-8">
-         <title>TREC SEARCH</title>
-         <link rel="stylesheet" href="css/style.css"/>
-         </head>
-    <body>
-        <h1>TREC SEARCH</h1>
-        <p><em><strong>the fair search engine</strong></em></p>
-        <div class=" Search-box">
-            <input class="search-txt" type="text" name="" placeholder="Type to Search ">
-        <a class="search-btn" href="£"></a>
+        <link rel="stylesheet" href="css/style.css"/>
+</div>
+
+<body>
+    <div id="parent">
+        <div class="searchBar">
+            <div class="fa fa-search"></div>
+            <input type="text" placeholder="Search"/>
+            <div class="fa fa-times"></div>
+            <link rel="stylesheet" href="css/style.css"/>
         </div>
-        <link> 
-        </body>
+    </div>
 
+ 
+</body>
 
-    </body>
  </html>
